--- a/gz4gt201503/spark-demo/pom.xml
+++ b/gz4gt201503/spark-demo/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.run</groupId>
-	<artifactId>rundc-tool</artifactId>
+	<artifactId>spark-demo</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
-	<name>rundc-tool</name>
+	<name>spark-demo</name>
 	<organization>
 		<name>xx</name>
 		<url>http://www.xx.com</url>
@@ -14,9 +14,9 @@
 
 	<properties>
 		<!-- CDH -->
-		<hadoop.version>2.5.0-cdh5.2.0</hadoop.version>
+		<hadoop.version>2.5.0-cdh5.2.1</hadoop.version>
+		<hive.version>0.13.1-cdh5.2.1</hive.version>
 		<!-- COMMON -->
-		<jdom.version>2.0.1</jdom.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
 		<junit.version>4.11</junit.version>
@@ -34,7 +34,6 @@
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-client</artifactId>
 			<version>${hadoop.version}</version>
-			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>org.mortbay.jetty</groupId>
@@ -46,30 +45,41 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- common -->
+		<!-- hive -->
 		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom</artifactId>
-			<version>${jdom.version}</version>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-jdbc</artifactId>
+			<version>${hive.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.hive</groupId>
+					<artifactId>hive-exec</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-util</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- logger -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<!-- test -->
 		<dependency>
@@ -234,31 +244,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-scm-plugin</artifactId>
 				<version>1.8.1</version>
-			</plugin>
-			<!-- assembly:single -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.5.3</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>util.HadoopAppDriver</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
